[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain_games"
version = "0.2.0"
description = "Proyecto Brain Games"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "prompt>=0.4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
